// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSTextarea Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-disabled"
    >
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        className="slds-textarea"
        disabled={true}
        id="text-area-disabled"
        name="disabled"
        placeholder="Placeholder Text"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Docs site Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="unique-id-1"
    >
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        className="slds-textarea"
        id="unique-id-1"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Docs site Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-disabled"
    >
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        className="slds-textarea"
        disabled={true}
        id="text-area-disabled"
        name="disabled"
        placeholder="Placeholder Text"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Docs site Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element slds-has-error"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-error"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
      </abbr>
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        aria-describedby="error-1"
        className="slds-textarea"
        id="text-area-error"
        name="required-textarea-error"
        placeholder="Placeholder Text"
        required={true}
      />
    </div>
    <div
      className="slds-form-element__help"
      id="error-1"
    >
      This field is required
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element slds-has-error"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-error"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
      </abbr>
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        aria-describedby="error-1"
        className="slds-textarea"
        id="text-area-error"
        name="required-textarea-error"
        placeholder="Placeholder Text"
        required={true}
      />
    </div>
    <div
      className="slds-form-element__help"
      id="error-1"
    >
      This field is required
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Required 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-required"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
      </abbr>
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        className="slds-textarea"
        id="text-area-required"
        name="required-textarea"
        placeholder="Placeholder Text"
        required={true}
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSTextarea Standard 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="text-area-standard"
    >
      Textarea Label
    </label>
    <div
      className="slds-form-element__control"
    >
      <textarea
        className="slds-textarea"
        id="text-area-standard"
        name="standard-textarea"
        placeholder="Placeholder Text"
      />
    </div>
  </div>
</div>
`;
